--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
   </head>
   <body>
-    <script type="text/javascript" src="js/methods.js"></script>
+    <script type="text/javascript" src="methods.js"></script>
    
     <img id="logo" src="img/ericsson_logo.png" style='left:0%;top:0px; z-index:2; position:fixed; display:none;' /> 
     <label id="text" style=' position:fixed;width:10%; z-index: 2; display:none;color:white;'>Smart Sera</label>
@@ -38,7 +38,6 @@
         <input type="checkbox" style='display:none;' >
         <span class="slider round"></span>
     </label>
-
 
     <a-scene artoolkit embedded arjs='trackingMethod: best;debugUIEnabled: false;' > 
           
